--- a/Customer/src/main/resources/templates/fragments.html
+++ b/Customer/src/main/resources/templates/fragments.html
@@ -89,6 +89,7 @@
                                         <i class="fa-solid fa-right-to-bracket"></i>
                                         Đăng nhập
                                     </a>
+                                    </button>
                                 </li>
                             </ul>
                         </div>
@@ -100,9 +101,8 @@
 </div>
 <!-- End Main Top -->
 
-<!-- Start Main Top -->
+<!-- Start Center Header -->
 <header class="main-header" th:fragment="main-header">
-    <!-- Start Navigation -->
     <div class="logo">
         <div class="header-container">
             <div>
@@ -137,9 +137,8 @@
             </div>
         </div>
     </div>
-    <!-- End Navigation -->
 </header>
-<!-- End Main Top -->
+<!-- End Center Header -->
 
 <!-- Start Top Search -->
 <div class="header-breadcrumbs" th:fragment="top-search">
@@ -247,6 +246,33 @@
         </div>
     </div>
 </footer>
+
+<!-- Start Login Modal -->
+<div class="modal fade" id="exampleAddCategoryModal" tabindex="-1" role="dialog"
+     aria-labelledby="exampleAddCategoryModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleAddCategoryModalLabel">New Category</h5>
+            </div>
+            <div class="modal-body">
+                <form th:action="@{/save-category}" method="post">
+                    <div class="form-group">
+                        <label for="name" class="col-form-label">Category Name:</label>
+                        <input type="text" class="form-control" id="name" name="name">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Login Modal -->
+
 <div th:fragment="script">
     <!-- ALL JS FILES -->
     <!--    <script th:src="@{/js/jquery-3.2.1.min.js}"></script>-->
