--- a/Customer/src/main/resources/templates/home.html
+++ b/Customer/src/main/resources/templates/home.html
@@ -4,7 +4,6 @@
 
 <head th:replace="~{fragments::head}">
 
-
 </head>
 
 <body>
@@ -22,213 +21,34 @@
 
 <!--Start Product-->
 
-<div class="product-wrapper">
+<div class="product-wrapper" th:each="category : ${categories}">
     <div>
         <div class="tabs-header">
-
+            <div class="title-all text-center">
+                <h1 th:text="${category.name}"></h1>
+            </div>
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-            <div class="col">
+            <div class="col col-lg-3 col-md-6" th:each="product : ${products}"
+                 th:if="${category.name == product.category.name}">
                 <div class="tab-content-books">
                     <ul class="product-list">
                         <li class="product-list-items">
                             <div class="inner-item">
                                 <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
+                                    <a class="item-link" th:href="@{/product-detail}">
+                                        <img class="product-img" alt="" th:src="@{'data:image/jpeg;base64,' + ${product.image}}">
                                     </a>
                                 </div>
                                 <div>
-                                    <h2 class="product-name">
+                                    <h2 class="product-name" th:text="${product.name}">
                                         <a>
-                                            Muoi
+
                                         </a>
                                     </h2>
                                     <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col  ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col  ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col  ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col  ">
-                <div class="tab-content-books">
-                    <ul class="product-list">
-                        <li class="product-list-items">
-                            <div class="inner-item">
-                                <div class="item-container">
-                                    <a class="item-link">
-                                        <img class="product-img" alt="" th:src="@{/images/muoi.jpg}">
-                                    </a>
-                                </div>
-                                <div>
-                                    <h2 class="product-name">
-                                        <a>
-                                            Muoi
-                                        </a>
-                                    </h2>
-                                    <div class="price-label">
-                                        <span class="current-price">38.000d</span>
-                                        <div class="old-price">20.000d</div>
+                                        <span class="current-price" th:text="${product.costPrice}">đ</span>
+                                        <div class="old-price" th:text="${product.salePrice}">đ</div>
                                     </div>
                                 </div>
                             </div>
@@ -239,7 +59,6 @@
         </div>
     </div>
 </div>
-
 <!--End Product-->
 
 <!-- Start Footer  -->
