--- a/Admin/src/main/resources/templates/login.html
+++ b/Admin/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
                                     <a class="small" th:href = "@{/forgot-password}" href="forgot-password.html">Forgot Password?</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" th:href = "@{/register}" href="register.html">Create an Account!</a>
+                                    <a class="small" th:href = "@{/register}">Create an Account!</a>
                                 </div>
                             </div>
                         </div>
