--- a/Admin/src/main/resources/templates/orders.html
+++ b/Admin/src/main/resources/templates/orders.html
@@ -34,6 +34,9 @@
                         <th class="price-pr">Order Status</th>
                         <th class="quantity-box">Total Price</th>
                         <th class="total-pr">Payment Method</th>
+                        <th class="user-name">User name</th>
+                        <th class="phone">Phone</th>
+                        <th class="address">Address</th>
                         <th>Action</th>
                     </tr>
                     </thead>
@@ -56,6 +59,15 @@
                         </td>
                         <td class="total-pr" style="color: black">
                             <span></span>[(${order.paymentMethod})]</span>
+                        </td>
+                        <td class="name-user">
+                            <p th:text="${order.customer.username}"></p>
+                        </td>
+                        <td class="phone-number">
+                            <p th:text="${order.customer.phoneNumber}"></p>
+                        </td>
+                        <td class="address">
+                            <p th:text="${order.customer.address}"></p>
                         </td>
                         <td>
                             <a th:if="${order.accept} == false" th:href="@{'/accept-order/' + ${order.id}}"
