--- a/Admin/src/main/resources/templates/products.html
+++ b/Admin/src/main/resources/templates/products.html
@@ -17,10 +17,8 @@
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-
         <!-- Main Content -->
         <div id="content">
-
             <!-- Topbar -->
             <nav th:replace="~{fragments::top-navbar}">
             </nav>
@@ -28,15 +26,22 @@
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
-                <div class="input-group" style="width: 30%; margin-bottom: 20px;">
-                    <form th:action="@{/search-products/0}" method="get">
-                        <input type="text" class="form-control rounded" placeholder="Search" name="keyword"
+                <div class="input-group" style="margin-bottom: 20px;">
+                    <form class="d-flex" th:action="@{/search-products}" method="get">
+                        <input type="text" class="form-control rounded"
+                               style="margin-right: 6px"
+                               placeholder="Search" name="keyword"
                                aria-label="Search"
                                aria-describedby="search-addon"/>
                         <button type="submit" class="btn btn-outline-primary">search</button>
                     </form>
                 </div>
-                <a th:href="@{/add-product}" class="btn btn-primary">Add Product</a>
+                <a th:href="@{/add-product}"
+                   class="btn btn-primary"
+                   style="margin-bottom: 12px"
+                >
+                    Add Product
+                </a>
                 <p th:if="${size == 0} ">No Products</p>
                 <div th:if="${success}" class="text-center alert alert-success">
                     <p th:text="${success}"></p>
@@ -78,34 +83,9 @@
                             </a>
                         </td>
 
-<!--                        <td>-->
-<!--                            <a-->
-<!--                               th:href="@{'/deleted-product/' + ${product.id}}"-->
-<!--                               class="btn btn-danger">Delete-->
-<!--                            </a>-->
-<!--                        </td>-->
-
                     </tr>
                     </tbody>
                 </table>
-
-
-                <!--Pagination  -->
-                <!--                    <nav aria-label="...">-->
-                <!--                        <ul class="pagination" >-->
-                <!--                            <li th:if= "${currentPage != 0}" class="page-item ">-->
-                <!--                                <a th:href = "@{'/products/' + ${currentPage - 1}}" class="page-link">Previous</a>-->
-                <!--                            </li >-->
-                <!--                            <li th:each = "i : ${#numbers.sequence(1, totalPages)}" th:classappend = "${currentPage == i - 1 ? 'active' : ''}" class="page-item">-->
-                <!--                                <a th:href = "@{'/products/' + ${i - 1}}" class="page-link" href="#">-->
-                <!--				     <span th:text = "${i}">-->
-                <!--				     </span></a></li>-->
-                <!--                            <li th:if = "${currentPage + 1 != totalPages}" class="page-item">-->
-                <!--                                <a th:href = "@{'/products/' + ${currentPage + 1}}" class="page-link" href="#">Next</a>-->
-                <!--                            </li>-->
-                <!--                        </ul>-->
-                <!--                    </nav>-->
-                <!--Pagination  -->
             </div>
             <!-- /.container-fluid -->
 
@@ -116,10 +96,8 @@
         <footer th:replace="~{fragments::footer}">
         </footer>
         <!-- End of Footer -->
-
     </div>
     <!-- End of Content Wrapper -->
-
 </div>
 <!-- End of Page Wrapper -->
 
